2017.9/_sources/plugins/available/feature-table/group.txt
group: Group samples or features by a metadata category
=======================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table group [OPTIONS]

     Group samples or features in a feature table using metadata to define the
     mapping of IDs to a group.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency]
                                     [required]
                                     The table to group samples or
                                     features on.
     --p-axis [feature|sample]       [required]
                                     Along which axis to group. Each
                                     ID in the given axis must exist in
                                     `metadata`.
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
     --m-metadata-category TEXT      Category from metadata file or artifact
                                     viewable as metadata  [required]
                                     A category
                                     defining the groups. Each unique value will
                                     become a new ID for the table on the given
                                     `axis`.
     --p-mode [sum|mean-ceiling|median-ceiling]
                                     [required]
                                     How to combine samples or
                                     features within a group. `sum` will sum the
                                     frequencies across all samples or features
                                     within a group; `mean-ceiling` will take the
                                     ceiling of the mean of these frequencies;
                                     `median-ceiling` will take the ceiling of
                                     the median of these frequencies.
     --o-grouped-table PATH          Artifact: FeatureTable[Frequency] [required
                                     if not passing --output-dir]
                                     A table that
                                     has been grouped along the given `axis`. IDs
                                     on that axis are replaced by values in the
                                     `metadata` category.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Group samples or features by a metadata category

   Group samples or features in a feature table using metadata to define the
   mapping of IDs to a group.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The table to group samples or features on.
   axis : Str % Choices({'feature', 'sample'})
       Along which axis to group. Each ID in the given axis must exist in
       `metadata`.
   metadata : MetadataCategory
       A category defining the groups. Each unique value will become a new ID
       for the table on the given `axis`.
   mode : Str % Choices({'mean-ceiling', 'median-ceiling', 'sum'})
       How to combine samples or features within a group. `sum` will sum the
       frequencies across all samples or features within a group; `mean-
       ceiling` will take the ceiling of the mean of these frequencies;
       `median-ceiling` will take the ceiling of the median of these
       frequencies.

   Returns
   -------
   grouped_table : FeatureTable[Frequency]
       A table that has been grouped along the given `axis`. IDs on that axis
       are replaced by values in the `metadata` category.</pre>
       </div>
     </div>
   </div>